# hubris

./: Cargo.toml  lpc55.gdb  openocd.cfg
.github/workflows/: build.yml
app/demo-stm32f4-discovery/: app-f3.toml  app.toml
app/demo-stm32h7-nucleo/: app-h743.toml  app-h753.toml  app-h7b3.toml
app/gemini-bu/: app.toml
app/gemini-bu-rot/: app.toml
app/gimlet/: app.toml
app/gimlet-rot/: app.toml
app/gimletlet/: app.toml
app/lpc55xpresso/: app.toml
app/sidecar/: app.toml
demo/: app.toml
demo-100fx/: Cargo.toml  app.toml  openocd.cfg
demo-100fx/src/: main.rs
demo-stm32h7/: app-h743.toml
demo-stm32h7/src/: main.rs
drv/lpc55-syscon/src/: main.rs
drv/lpc55-wwdt/: Cargo.toml
drv/lpc55-wwdt/src/: main.rs
drv/stm32h7-eth/: Cargo.toml
drv/stm32h7-eth/src/: desc.rs  main.rs  mdio.rs  rx_ring.rs  tx_ring.rs  vsc8552_regs.rs
drv/stm32h7-gpio/: Cargo.toml
drv/stm32h7-gpio/src/: main.rs
drv/stm32h7-spi-server/: Cargo.toml
drv/stm32h7-spi-server/src/: main.rs
idl/: gimlet-hf.idol  i2c.idol  lpc55-gpio.idol  spi.idol  stm32h7-gpio.idol  stm32h7-rcc.idol  user-leds.idol
lpc55/: app.toml
task-blink-status/: Cargo.toml
task-blink-status/src/: main.rs
task-demo-100fx/: Cargo.toml
task-demo-100fx/src/: ksz8463.rs  main.rs
task-ping/src/: main.rs
task-sup/: Cargo.toml
task-sup/src/: main.rs
task-sup2/: Cargo.toml
task-sup2/src/: main.rs
test/tests-gemini-bu/: app.toml
test/tests-gemini-bu-rot/: app.toml
test/tests-stm32fx/: app-f3.toml  app.toml
test/tests-stm32h7/: app-h743.toml  app-h753.toml  app-h7b3.toml
