[package]
name = "task-demo-100fx"
version = "0.1.0"
authors = ["Arjen Roodselaar <arjen@oxide.computer>"]
edition = "2018"

[dependencies]
cortex-m = "0.6.2"
cortex-m-semihosting = { version = "0.3.5", optional = true }
userlib = {path = "../userlib"}
ringbuf = {path = "../ringbuf" }
zerocopy = "0.3.0"
num-traits = { version = "0.2.12", default-features = false }
drv-stm32h7-spi-server = {path = "../drv/stm32h7-spi-server"}
bitfield = "0.13"

[features]
default = ["standalone"]
standalone = ["itm"]
itm = [ "userlib/log-itm" ]
semihosting = [ "cortex-m-semihosting", "userlib/log-semihosting" ]

# a target for `cargo xtask check`
[package.metadata.build]
target = "thumbv7em-none-eabihf"

# This section is here to discourage RLS/rust-analyzer from doing test builds,
# since test builds don't work for cross compilation.
[[bin]]
name = "task-demo-100fx"
test = false
bench = false
