[package]
name = "drv-stm32h7-eth"
version = "0.1.0"
authors = ["Cliff L. Biffle <cliff@oxide.computer>"]
edition = "2018"

[dependencies]
ringbuf = {path = "../../ringbuf" }
userlib = {path = "../../userlib"}
zerocopy = "0.3.0"
byteorder = {version = "1.3", default-features = false}
num-traits = {version = "0.2", default-features = false}
drv-stm32h7-rcc-api = {path = "../stm32h7-rcc-api"}
drv-stm32h7-gpio-api = {path = "../stm32h7-gpio-api"}
vcell = "0.1.2"
bitfield = "0.13.2"
cortex-m = "0.6.0"
cortex-m-semihosting = {version = "0.3.3", optional = true}
membar = {path = "../../membar"}

[dependencies.stm32h7]
git = "https://github.com/oxidecomputer/stm32-rs-nightlies"

[build-dependencies]
build-util = {path = "../../build-util"}

[features]
default = ["standalone", "h743", "itm"]
standalone = []
h743 = ["stm32h7/stm32h743"]
semihosting = ["userlib/log-semihosting", "cortex-m-semihosting"]
itm = ["userlib/log-itm"]

# This section is here to discourage RLS/rust-analyzer from doing test builds,
# since test builds don't work for cross compilation.
[[bin]]
name = "drv-stm32h7-eth"
test = false
bench = false

[package.metadata.build]
target = "thumbv7em-none-eabihf"
